avoid image display glitch when cropping in the Image block
Styles the image and caption in editor with table display only
when the block is both aligned and resized.

--- a/packages/block-library/src/image/editor.scss
+++ b/packages/block-library/src/image/editor.scss
@@ -55,7 +55,7 @@ figure.wp-block-image:not(.wp-block) {
 .wp-block[data-align="left"],
 .wp-block[data-align="center"],
 .wp-block[data-align="right"] {
-	> .wp-block-image {
+	> .wp-block-image.is-resized {
 		display: table;
 
 		> figcaption {
